# uv-workspace-dependabot

./: pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: dependabot.yml
apps/bakery/: pyproject.toml
apps/flowershop/: pyproject.toml
libs/pos_system/: pyproject.toml
libs/testing_tools/: pyproject.toml
