[project]
name = "workspace"
version = "0.1.0"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "apps/*",
    "libs/*",
]

[tool.uv.sources]
bakery = { workspace = true }
flowershop = { workspace = true }
pos-system = { workspace = true }
project-testing-tools = { workspace = true }

[dependency-groups]
dev = [
    "ruff~=0.14.0"
]
apps = [
    "bakery",
    "flowershop",
]
libs = [
    "project-testing-tools",
    "pos-system",
]
