[project]
name = "flowershop"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pos-system",
    "psycopg[binary,pool]~=3.2.10",
    "sqlalchemy==2.0.40"
]

[dependency-groups]
dev = [
    "project-testing-tools"
]

[tool.uv]
package = false

[tool.uv.sources]
pos-system = { workspace = true, editable = true }
project-testing-tools = { workspace = true, editable = true }
